--- a/CommonBusinessLogic/packages.config
+++ b/CommonBusinessLogic/packages.config
@@ -1,24 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.8" targetFramework="net451" />
+  <package id="Akka" version="1.0.8" targetFramework="net461" />
+  <package id="Akka.Cluster" version="1.0.8.25-beta" targetFramework="net461" />
   <package id="Akka.Logger.CommonLogging" version="1.0.8" targetFramework="net461" />
-  <package id="Akka.Logger.NLog" version="1.0.8" targetFramework="net451" />
-  <package id="Akka.Persistence" version="1.0.6.17-beta" targetFramework="net451" />
+  <package id="Akka.Persistence" version="1.0.8.25-beta" targetFramework="net461" />
   <package id="Akka.Remote" version="1.0.8" targetFramework="net461" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net451" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net451" />
+  <package id="Common.Logging" version="3.3.2-Alpha3" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.3.2-Alpha3" targetFramework="net461" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net451" />
-  <package id="Helios" version="2.1.1" targetFramework="net461" />
+  <package id="Helios" version="1.4.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
-  <package id="NLog" version="4.3.2" targetFramework="net451" />
-  <package id="System.Collections" version="4.0.10" targetFramework="net461" />
-  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net451" />
-  <package id="System.Diagnostics.Debug" version="4.0.10" targetFramework="net461" />
-  <package id="System.Globalization" version="4.0.10" targetFramework="net461" />
-  <package id="System.Linq" version="4.0.0" targetFramework="net451" />
-  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net451" />
-  <package id="System.Runtime" version="4.0.20" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.0.10" targetFramework="net461" />
-  <package id="System.Threading" version="4.0.10" targetFramework="net461" />
-  <package id="System.Threading.Tasks" version="4.0.0" targetFramework="net451" />
+  <package id="NLog" version="4.4.0-beta11" targetFramework="net461" />
+  <package id="System.Collections" version="4.0.11-rc2-24027" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.2.0-rc2-24027" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" targetFramework="net461" />
+  <package id="System.Globalization" version="4.0.11-rc2-24027" targetFramework="net461" />
+  <package id="System.Linq" version="4.1.0-rc2-24027" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" targetFramework="net461" />
+  <package id="System.Runtime" version="4.1.0-rc2-24027" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.1.0-rc2-24027" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.11-rc2-24027" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.0.11-rc2-24027" targetFramework="net461" />
 </packages>
