--- a/EY.SSA.ActorSystemHost/App.config
+++ b/EY.SSA.ActorSystemHost/App.config
@@ -49,7 +49,7 @@
 					loglevel = DEBUG
 					
           // Define an Nlog logger for the Akka system
-          loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
+          //loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
 
           // Enables connectivity to the remote ActorSystemBridge
           actor {
@@ -65,8 +65,7 @@
             }
           }
           
-				}
-				akka.persistence{
+          akka.persistence{
 					journal{
 						plugin = "akka.persistence.journal.couchbase"
 						couchbase:{
@@ -127,7 +126,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -135,7 +134,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Couchbase.NetClient" publicKeyToken="05e9c6b5a9ec94c2" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.2.8.0" newVersion="2.2.8.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.8.0" newVersion="2.2.4.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -143,11 +142,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.3.2.0" newVersion="3.3.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.3.2.0" newVersion="3.3.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
