fixed Akka.Persistence HOCON configuration, so CouchDb loads correctly

--- a/EY.SSA.ActorSystemHost/App.config
+++ b/EY.SSA.ActorSystemHost/App.config
@@ -65,7 +65,7 @@
             }
           }
           
-          akka.persistence{
+          persistence{
 					journal{
 						plugin = "akka.persistence.journal.couchbase"
 						couchbase:{
